2006-12-06 Ian Rutt
 * Added extra check on glint start time consistency (thanks to Oli).

2006-12-05 Magnus Hagdorn
 * src/fortran/eismint3_forcing.F90: fixed minor bug where line was too long

2006-11-07 Ian Rutt
 * Fixed IBM build problem reported by Oli.

2006-10-31 Ian Rutt
 * Fixed minor bug in EISMINT-3-GL output

2006-10-27 Ian Rutt
 * Merged RESTART_ON_DEMAND branch into main trunk. Builds fine.

2006-10-25 Ian Rutt
 * Fixed problem with hotstart variables - now works when hotstart
 variables are specified in several var.def files.
 * Better implementation of EISMINT-3-GL forcing - copes with temperature
 perturbation and hotstarts better now.

2006-10-23 Ian Rutt
 * Major enhancements to GLINT API, plus one or two bug
 corrections. Time-step coordination and averaging is now handled in a
 much-improved way.

2006-10-13 Ian Rutt
 * Corrected bug with initialisation of precip enhancement in EISMINT3-GL
 * Made romberg integration functions recursive. This corrects a serious
   bug in the annual PDD scheme
 * Corrected problem with annual PDD scheme whereby two edges of the PDD
   table weren't being initialised.
	
2006-10-10 Ian Rutt
 * Added precip enhancement to eismint3-greenland code

2006-10-02 (from RESTART_ON_DEMAND)
 * Minor bug-fix (spotted by Magi)
 * Fixed build bug (hopefully)

2006-09-28 Ian Rutt
 * Added append capability to output files. 

2006-09-27 Ian Rutt
 * Fixed minor bug in nc2config

2006-09-27 Ian Rutt (from RESTART_ON_DEMAND)
 * Tested restarts with glint, and tidied up a few loose ends

2006-09-26 Ian Rutt (from RESTART_ON_DEMAND)
 * Fixed various bugs - lower array bounds now handled
 correctly.
 * Implemented glint- and glide-specific interfaces
 * Wrote basic code to handle file information in restart files

2006-09-25 Ian Rutt (from RESTART_ON_DEMAND)
 * Made restart compilation and generation optional (using configure
 option --enable-restarts)
 * Rewrote restart generation to produce only two include files (one for