@@ -190,10 +190,6 @@ program glint_ebm_ex
     lons_orog(i)=(360.0/nxo)*i-(180.0/nxo)
   enddo
 
-  ! Set the message level (6 is the default - all messages on)
-
-  call glimmer_set_msg_level(6)
-
   ! Initialise the ice model
 
   call initialise_glint(ice_sheet, &
@@ -207,6 +203,11 @@ program glint_ebm_ex
        orog_longs=lons_orog, &
        orog_lats=lats_orog, &
        daysinyear=365)
+
+  ! Set the message level (1 is the default - only fatal errors)
+  ! N.B. Must do this after initialisation
+
+  call glimmer_set_msg_level(6)
 
   ! Get coverage maps for the ice model instances
 
