@@ -1,3 +1,7 @@
+2007-02-07 Ian Rutt
+ * Fixed bug with start time consistency check... (doh)
+ * Clarified comments about log-levels
+
 2006-12-06 Ian Rutt
  * Added extra check on glint start time consistency (thanks to Oli).
 
